Fixed Borders of Right aligned buttons from Moving

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -14,7 +14,7 @@
     font-size:150%;
     border-radius: 10px;
     font-family:"helvetica";
-    border: none;
+    border:1px solid #5FCF80;
     
 
   }
@@ -52,6 +52,7 @@
     color: #5FCF80;
     background-color: #FFFFFF;
     border:1px solid #5FCF80;
+    
 }
 
 .deviseform {
